[gd_scene load_steps=5 format=3 uid="uid://btu2p6usgw8mt"]

[ext_resource type="Script" uid="uid://d4h7k5rtntr4v" path="res://PauseMenu.gd" id="1_etnfi"]
[ext_resource type="FontFile" uid="uid://ch2q8fckwhep" path="res://fonts/PressStart2P-Regular.ttf" id="1_nov15"]
[ext_resource type="AudioStream" uid="uid://kw0ka54ppx3m" path="res://SFX/menos_1_ponto.mp3" id="3_q775a"]
[ext_resource type="AudioStream" uid="uid://bx2fi52koc156" path="res://SFX/coracao_vida.mp3" id="4_qg8xq"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_etnfi")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -55.0
offset_right = 310.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_nov15")
theme_override_font_sizes/font_size = 48
text = "Jogo Pausado!"

[node name="ResumeButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nov15")
text = "Continuar"

[node name="RestartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nov15")
text = "Reiniciar"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_nov15")
text = "Sair do Jogo"

[node name="sfx_botao" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q775a")
volume_db = -7.0
pitch_scale = 4.0
attenuation = 1.8025047

[node name="sfx_hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qg8xq")
volume_db = -10.0
pitch_scale = 14.0
